[tool.poetry]
name = "pylearn"
version = "0.1.0"
description = ""
authors = ["nasubi916 <r916nis@gmai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
